# flexquery

./: .env  .gitignore  README.md  environment.yml  profiles.yml  pyproject.toml  requirements.txt
core/flexquery/: README.md  connection.py  processor.py  setup.py  utils.py  version.py
core/flexquery/cli/: __init__.py  main.py  params.py  requires.py
core/flexquery/config/: config.py  constants.py  exceptions.py  logging_config.py  pathsconfig.py
core/flexquery/docs/: CONFIGURATION.md  OVERVIEW.md  README.md
core/flexquery/docs/templates/: params_example.yml  query_example.sql
core/flexquery/queries_library/TEST/: params.yml
core/flexquery/task/: base.py  docs_serve.py  init.py  io.py  run.py
core/flexquery/templates/web_docs/: web_template.html
core/flexquery/utils/: calculations.py  connection.py  docs_browser.py  processor.py  skeleton.py
core/scripts/: example.bat
flexquery/: __init__.py  __main__.py
flexquery/log/: data_processor.log.archive
flexquery/queries/: duckdb_test.sql
flexquery/scripts/: connection.py  processor.py
flexquery/utils/: logging_config.py  params.yml
utils/: config.py
